--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@ body {
 
 #calculator {
   background-color: #dd88cf;
-  padding: 1%;
+  padding: 1.5%;
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 50%;
+  width: 45%;
   margin: 0 auto;
   border-radius: 10px;
 }
@@ -33,7 +33,7 @@ body {
 #display {
   font-family: "Digital-7", sans-serif;
   width: 100%;
-  padding: 2%;
+  padding: 3%;
   font-size: 4.5rem;
   border: 3px solid rgb(75, 22, 76);
   background-color: #f5f5f5;
@@ -45,8 +45,9 @@ body {
 
 button {
   border-radius: 10px;
-  padding: 4% 1%;
+  padding: 6% 1%;
   border: 3px solid #f5f5f5;
+  font-size: 3rem;
 }
 
 #buttons {
@@ -81,7 +82,6 @@ button {
 
 .number,
 #equals {
-  font-size: 3rem;
   background-color: #eabde6;
 }
 
@@ -90,7 +90,6 @@ button {
 #multiply,
 #divide {
   width: 49%;
-  font-size: 3rem;
   background-color: #d69fee;
 }
 
@@ -104,7 +103,6 @@ button {
 #clear {
   background-color: #7e5cad;
   width: 19%;
-  font-size: 3rem;
 }
 
 #equals {
@@ -114,7 +112,6 @@ button {
 #dot {
   background-color: #7e5cad;
   width: 49%;
-  font-size: 3rem;
 }
 
 #display span {
@@ -123,7 +120,6 @@ button {
 
 #plus-minus {
   width: 49%;
-  font-size: 3rem;
   background-color: #7e5cad;
 }
 
@@ -132,4 +128,43 @@ button {
   border-color: #f5f5f5;
   color: #f5f5f5;
   background-color: #7e5cad;
+}
+
+@media (max-width: 950px) {
+  #calculator {
+    width: 60%;
+  }
+}
+@media (max-width: 801px) {
+  #calculator {
+    width: 65%;
+  }
+}
+@media (max-width: 716px) {
+  #calculator {
+    width: 75%;
+  }
+}
+@media (max-width: 631px) {
+  #calculator {
+    width: 85%;
+  }
+}
+@media (max-width: 561px) {
+  #calculator {
+    width: 90%;
+  }
+}
+@media (max-width: 516px) {
+  #calculator {
+    width: 95%;
+  }
+}
+@media (max-width: 489px) {
+  #calculator {
+    width: 100%;
+  }
+  button {
+    font-size: 2rem;
+  }
 }
